Añadido de ventanas eliminarProducto, detalle Producto, mainMenu, menuProductos y ordenar el proyecto

--- a/AniadirProducto.html
+++ b/AniadirProducto.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Healthy Basket - Añadir Producto</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles/stylesAniadirProcuto.css">
 </head>
 <body>
-<div class="login-container">
+<div class="aniadir-container">
   <h1 class="title">Añadir Producto</h1>
   <p class="subtitle">Ingrese los datos nutricionales</p>
   <div class="logo-container">
@@ -34,6 +34,6 @@
     <button type="submit" class="create-btn">Registrar Producto</button>
   </form>
 </div>
-<script src="script.js"></script>
+<script src="scripts/scriptAniadirProducto.js"></script>
 </body>
 </html>
