--- a/Registro.html
+++ b/Registro.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/stylesRegistro.css">
 </head>
 <body>
-<div class="login-container">
+<div class="registro-container">
     <div class="logo-container">
         <div class="circle">
            <img src="img/Logo Healthy(SinLetras).png" alt="logo Healthy">
@@ -32,6 +32,6 @@
     </form>
 </div>
 
-<script src="script.js"></script>
+<script src="scripts/scriptRegistro.js"></script>
 </body>
 </html>
