--- a/contrasena.html
+++ b/contrasena.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Healthy Basket - Recuperar Contraseña</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles/stylesContrsena.css">
 </head>
 <body>
-<div class="login-container">
+<div class="contra-container">
   <div class="circle">
-    <img src="img/Logo Healthy(SinLetras).png" alt="Logo"> <!-- Aquí puedes agregar tu imagen -->
+    <img src="img/Logo Healthy(SinLetras).png" alt="Logo">
   </div>
-  <h2 class="title">Olvidó</h2>
-  <p class="subtitle">Contraseña?</p>
+  <h2 class="title">Olvidó Contraseña</h2>
+  <!--<p class="subtitle">Contraseña?</p>-->
   <p class="instructions">No te preocupes, sigue las instrucciones</p>
   <form id="forgot-password-form">
     <label for="email">Email</label>
@@ -21,9 +21,9 @@
     </div>
     <button type="submit" class="create-btn">Recuperar Contraseña</button>
   </form>
-  <a href="login.html" class="back-link">Volver al login</a>
+  <a href="incio.html" class="back-link">Volver al login</a>
 </div>
 
-<script src="script.js"></script>
+<script src="scripts/scriptContrasena.js"></script>
 </body>
 </html>
