Modificaciones en el diseño

--- a/Inicio.html
+++ b/Inicio.html
@@ -21,10 +21,10 @@
     <div class="input-group">
       <input type="password" id="password" placeholder="Contraseña">
     </div>
-    <p class="forgot-password">¿Olvido Contraseña?</p>
+    <p class="forgot-password">¿Olvidó Contraseña?</p>
     <button type="submit" class="login-btn">Entrar</button>
     <p class="or-text">O</p>
-    <button type="button" class="create-btn">Crear una cuenta</button>
+    <button type="button" id ="btnCrearCuenta" class="create-btn">Crear una cuenta</button>
   </form>
 </div>
 <script src="script.js"></script>
